# xiaozhi-mqtt-gateway

./: XiaoZhi_MQTT_Gateway_技术文档.md  协议扩展指南.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
rust-mqtt-xiaozhi/: .gitignore  Cargo.toml  README.md  TEST_CLIENT_README.md  config.toml
rust-mqtt-xiaozhi/auth-manager/: Cargo.toml
rust-mqtt-xiaozhi/auth-manager/src/: lib.rs
rust-mqtt-xiaozhi/config-manager/: Cargo.toml
rust-mqtt-xiaozhi/config-manager/src/: lib.rs
rust-mqtt-xiaozhi/mqtt-protocol/: Cargo.toml
rust-mqtt-xiaozhi/mqtt-protocol/src/: lib.rs
rust-mqtt-xiaozhi/src/: connection.rs  main.rs
rust-mqtt-xiaozhi/tests/: package.json  test-client.js
rust-mqtt-xiaozhi/udp-handler/: Cargo.toml
rust-mqtt-xiaozhi/udp-handler/src/: lib.rs  zero_copy.rs
rust-mqtt-xiaozhi/websocket-bridge/: Cargo.toml
rust-mqtt-xiaozhi/websocket-bridge/src/: compression.rs  connection_pool.rs  lib.rs  serialization.rs
test-demo/: README.md  RUN_TEST.md  package.json  test-client.js
